<resources>
    <string name="app_name">Spot</string>

    <string name="title_cloud_upload">Uploading</string>
    <string name="title_profile">Profile</string>
    <string name="title_show_all_data">All data points</string>
    <string name="title_about">About</string>
    <string name="title_license">Software licenses</string>
    <string name="default_toolbar_subtitle">last sent: none</string>
    <string name="toolbar_subtitle_prefix">last sent:&#160;</string>

    <string name="menu_search">Search</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_show_all_data">Show all data</string>
    <string name="menu_license">License</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>

    <string name="app_version">2.0.0</string>
    <string name="version_name">version 2.0.0</string>

    <string name="snack_bar_sign_in">SIGNIN</string>
    <string name="snack_bar_grant">GRANT</string>
    <string name="snack_bar_enable">ENABLE</string>
    <string name="rationale_location_permission">You must allow location permission to access device\'s location</string>
    <string name="enable_location_permission">Please enable location permission from app settings</string>

    <string name="user_name">user_name</string>
    <string name="user_email_id">user_email_id</string>
    <string name="user_photo_url">user_photo_url</string>
    <string name="last_report_time_stamp">last_report_time_stamp</string>
    <string name="upload_tasks_hashmap">upload_tasks_hashmap</string>

    <string name="sign_in_error">Sign in required. Please make sure device is connected to internet!</string>
    <string name="sign_out_error">Sign out error!</string>

    <string name="warning_no_connection">Device is not connected to internet!</string>
    <string name="info_internet_connection">Device is connected to internet</string>

    <string name="firebase_connection_message">Connection established to server.</string>
    <string name="firebase_disconnection_message">Disconnected from server!</string>
    <string name="gps_not_fiexed_toast">GPS not fixed, report ignored!</string>

    <string name="tap_button">Tap on me</string>
    <string name="last_data_report_title">Last reported time</string>

    <string name="date_time_format_for_cloud_data_push">yyyy-MM-dd HH:mm:ss</string>
    <string name="date_time_format_for_images_store">yyyyMMdd_HHmmss</string>

    <string name="log_out_button">LOGOUT</string>
    <string name="log_out_title">Do you want to logout?</string>
    <string name="log_out_message">You are signing out of Spot!</string>
    <string name="log_out_error">Logout error!</string>
    <string name="dash_symbol">-</string>
    <string name="delete_account">Delete my account from database</string>
    <string name="discard_button">DISCARD</string>
    <string name="upload_files_alert_dialog_title">Do you want to pause uploading images?</string>
    <string name="pause_button">PAUSE</string>

    <string name="none">None</string>

    <string name="app_description">Spot is a crowd-sourced reporting application. The application is used to report and record potholes and accidents on roads and also view the data entered on our website.</string>

    <string name="app_summary">App Summary</string>
    <string name="developer_info">Developer Info</string>

    <string name="developer_email_id">sarweshkumar47@gmail.com</string>
    <string name="github_url">https://github.com/sarweshkumar47</string>

    <string name="choose_reporting_type_title">Choose reporting type</string>

    <string name="pothole_text">Pothole</string>
    <string name="accident_text">Accident</string>

    <string name="send_mail_title">Send mail</string>
    <string name="report_sent_toast">Report sent</string>
    <string name="user_data_null_toast">User data null</string>
    <string name="unexpected_error_occur_toast">Unexpected error occurred</string>

</resources>
