<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/cloud_upload"
        android:title="@string/title_cloud_upload"
        app:actionLayout="@layout/view_cloud_upload_progress"
        app:showAsAction="always" />

    <item
        android:id="@+id/location_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/user_profile"
        android:title="@string/menu_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/license"
        android:title="@string/menu_license"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:title="@string/menu_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/user_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never" />

</menu>
